--- a/.gitattributes
+++ b/.gitattributes
@@ -23,3 +23,4 @@
 *.pyd    binary
 # Jupyter notebook
 *.ipynb  text eol=lf
+test_dataset/llava_instruct_150k.json filter=lfs diff=lfs merge=lfs -text
